# polylith-experiment

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  workspace.toml
bases/experiment/fastapi_app/: __init__.py  core.py
bases/experiment/typer_cli/: __init__.py  core.py
components/experiment/quotes/: __init__.py  core.py
development/: something.ipynb  something.py
projects/quotes_app/: Dockerfile  pyproject.toml
projects/quotes_cli/: pyproject.toml
test/bases/experiment/fastapi_app/: test_core.py
test/bases/experiment/typer_cli/: test_core.py
test/components/experiment/quotes/: test_core.py
