[tool.poetry]
name = "experiment"
version = "0.1.0"
description = ""
authors = ["eschmidt42 <11818904+eschmidt42@users.noreply.github.com>"]
readme = "README.md"
packages = [
    {include = "experiment/quotes",from = "components"},
    {include = "experiment/typer_cli",from = "bases"},
    {include = "experiment/fastapi_app",from = "bases"},
]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.3"
fastapi = "^0.111.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
jupyter = "^1.0.0"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# point to the test directory in ./tests
[tool.pytest.ini_options]
testpaths = ["tests"]